# cPlayer

./: CMakeLists.txt  LICENSE  README.md
include/: AudioProcessor.h  Grabber.h  VideoProcessor.h
src/: a_processor.cpp  audio_player.cpp  grabber.cpp  main.cpp  v_processor.cpp  video_player.cpp
